added a feature where a user can update a existing post
